<resources>
    <string name="app_name">ZegoWhiteBoardDocs</string>

    <string name="eraser">橡皮擦</string>
    <string name="ellipse">椭圆</string>
    <string name="rectangle">矩形</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="brush">画笔</string>
    <string name="pointer">激光笔</string>
    <string name="select">选择</string>
    <string name="line">直线</string>
    <string name="color">颜色</string>
    <string name="text">文本</string>
    <string name="style">格式</string>
    <string name="clear">清空</string>
    <string name="drag">拖拽</string>
</resources>